# CloudMem

./: .gitignore  README.md  README_CN.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yml
cloudflare/: deploy.sh  schema.sql  setup.sh  worker.mjs  wrangler.toml  wrangler.toml.example
cloudflare/pages/: README.md  config.example.js  index.html
cloudmem/: __init__.py  __main__.py  cli.py  config.py  convo_miner.py  entity_registry.py  knowledge_graph.py  layers.py  mcp_server.py  miner.py  normalize.py  onboarding.py  palace_graph.py  paths.py  project_init.py  searcher.py  session_finalizer.py  snapshot.py  spellcheck.py  split_mega_files.py  storage.py  sync.py  thread_ledger.py  thread_web.py
docs/: INSTALL.md  INSTALL_AI.md  rc_report_2026-04-07.md  release_checklist.md  thread_cloudflare.md
hooks/: mempal_precompact_hook.sh  mempal_save_hook.sh  post-session.sh
tests/: conftest.py  test_mcp_aliases.py  test_mcp_server_errors.py  test_mcp_server_tools.py  test_miner_incremental.py  test_normalize.py  test_onboarding_cli.py  test_paths.py  test_project_init.py  test_searcher_rerank.py  test_session_finalize_cli.py  test_session_finalizer.py  test_smoke_regressions.py  test_spellcheck.py  test_sync_exit_codes.py  test_thread_ledger.py
